@@ -4,6 +4,8 @@ The "r99999" numbers are Subversion revision numbers.
 Changes for current svn
 =======================
 
+ o 17082 CheckPoint new logging point "publish.enter"
+
  o r17073 CheckPoint now uses apache-log4j-1.2.15 http://logging.apache.org/log4j/1.2
 	  via commons-logging 1.1.1 http://commons.apache.org/logging
 
